[tool.poetry]
name = "sigmawater"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
osmnx = "^1.9.3"
clingo = "^5.7.1"
networkx = "^3.3"
geopandas = "^0.14.4"
googlemaps = "^4.10.0"
openpyxl = "^3.1.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
